
NEW FEATURES

* added compute_matrices, local_decode, global_decode, backward_prob, omega functions for HMM manipulations

* added load.model into print.crm so if it is given a file string it will load the external model and then print results.

* added function crmlist_fromfiles which allows you to select a set of .rda files for external models to create a crmlist with a model table.

marked 1.1.6 29 Aug 2014
-----------------
CHANGES

* Modification to documentation to avoid overflow on pdf

* Patches to crm so design.data and fixed values were handled when the ddl is specified

* cjs and js were patched so only the initial parameter values are stored; it was errantly storing the model when a model was used to specify initial values

* Additional changes to crm to use optimx to work with HMM models.  This required changes to HMMLikelihood argument names which conflicted with optimx.

* cjs and *.tpl files for cjs were modified to use debug; not all exes have been changed yet


marked 1.1.5 16 June 2014
-----------------
NEW FEATURES

* Real parameters are now created for HMM models with predict.crm; modified compute.real so reduction to unique real parameters occurs before computation of v-c matrix; also certain fields are added (eg occ) so that a full set of real parameters is displayed. That includes showing all parameters in an mlogit set.

* Added tag loss models HMMCJS1TL and HMMCJS2TL

* Added switch (remove.unused.columns) to create.dml and create.dm functions that controls whether unused columns in the design matrix are removed or not. The default is TRUE. 

CHANGES

* marked now depends on lme4 rather than imports; only way that Rscript would work. Also added methods to depends.

* ehmat (encounter history matrix) is now stored with ddl in make.design.data

* Model BayesMSCJS which also contains uncertain state was added to models.txt in anticipation of its inclusion and probitMsCJS was never used and was removed.


marked 1.1.4 10 Jan 2014